# apollos-kiosk

./: Cargo.toml  README.md
.github/workflows/: rust-ci.yml
assets/: apollos-kiosk.desktop
src/: main.rs
