[package]
name = "apollos-kiosk"
version = "0.1.0"
edition = "2024"

[dependencies]
apollos-types = {path = "../apollos-types"}
clap = { version = "4.5", features = ["derive", "env"] }
chrono = "0.4"
eframe = "0.33.3"
egui = "0.33.3"
egui_material_icons = "0.5.0"
log = "0.4"
paho-mqtt = "0.13"
serde = { version = "1.0", features = ["derive", "default"] }
serde_json = "1.0"
toml = "0.8.0"
dirs = "5.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
