[package]
name = "apollos-kiosk"
version = "0.1.0"
edition = "2024"
description = "Apollo's Kiosk"
authors = ["Gabe <gabe@neiam.org>"]
license = "GPLv3"


[package.metadata.deb]
assets = [
    # target/release path is special, and gets replaced by cargo-deb with the actual target dir path.
    ["target/release/apollos-kiosk", "usr/bin/", "755"],
    { source = "LICENSE.md", dest = "/usr/share/doc/neiam-apollos-kiosk/LICENSE", doc = true, mode = "0644" },
    { source = "README.md", dest = "/usr/share/doc/neiam-apollos-kiosk/README.md", doc = true, mode = "0644" },
    { source = "assets/apollos-kiosk.desktop", dest = "/usr/share/applications/apollos-kiosk.desktop", mode = "644" },
    { source = "assets/logo.png", dest = "/usr/share/icons/hicolor/256x256/apps/apollos-kiosk.png", mode = "644" },
]
section = "utility"
license-file = ["LICENSE.md", "4"]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/apollos-kiosk", dest = "/usr/bin/apollos-kiosk", mode = "0755" },
    { source = "LICENSE.md", dest = "/usr/share/doc/neiam-apollos-kiosk/LICENSE", doc = true, mode = "0644" },
    { source = "README.md", dest = "/usr/share/doc/neiam-apollos-kiosk/README.md", doc = true, mode = "0644" },
    { source = "assets/apollos-kiosk.desktop", dest = "/usr/share/applications/apollos-kiosk.desktop", mode = "644" },
    { source = "assets/logo.png", dest = "/usr/share/icons/hicolor/256x256/apps/apollos-kiosk.png", mode = "644" },
]

[dependencies]
apollos-types = { version = "0.1.0"}
clap = { version = "4.5", features = ["derive", "env"] }
chrono = "0.4"
dotenvy = "0.15"
eframe = "0.33.3"
egui = "0.33.3"
egui_material_icons = "0.5.0"
log = "0.4"
paho-mqtt = "0.13"
serde = { version = "1.0", features = ["derive", "default"] }
serde_json = "1.0"
toml = "0.8.0"
dirs = "5.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
#openssl = { version = "0.10", features = ["vendored"] }

[target.aarch64-unknown-linux-gnu]
linker = "aarch64-linux-gnu-gcc"